--- a/custom_components/versatile_thermostat/translations/el.json
+++ b/custom_components/versatile_thermostat/translations/el.json
@@ -82,6 +82,7 @@
           "eco_temp": "Θερμοκρασία στο προκαθορισμένο Eco",
           "comfort_temp": "Θερμοκρασία στο προκαθορισμένο Comfort",
           "boost_temp": "Θερμοκρασία στο προκαθορισμένο Boost",
+          "frost_temp": "Θερμοκρασία στο προκαθορισμένο Frost protection",
           "eco_ac_temp": "Θερμοκρασία στο προκαθορισμένο Eco για λειτουργία AC",
           "comfort_ac_temp": "Θερμοκρασία στο προκαθορισμένο Comfort για λειτουργία AC",
           "boost_ac_temp": "Θερμοκρασία στο προκαθορισμένο Boost για λειτουργία AC"
@@ -140,6 +141,7 @@
           "eco_away_temp": "Θερμοκρασία στο προκαθορισμένο Eco όταν δεν υπάρχει παρουσία",
           "comfort_away_temp": "Θερμοκρασία στο προκαθορισμένο Comfort όταν δεν υπάρχει παρουσία",
           "boost_away_temp": "Θερμοκρασία στο προκαθορισμένο Boost όταν δεν υπάρχει παρουσία",
+          "frost_away_temp": "Θερμοκρασία στο προκαθορισμένο Frost protection όταν δεν υπάρχει παρουσία",
           "eco_ac_away_temp": "Θερμοκρασία στο προκαθορισμένο Eco όταν δεν υπάρχει παρουσία σε λειτουργία AC",
           "comfort_ac_away_temp": "Θερμοκρασία στο προκαθορισμένο Comfort όταν δεν υπάρχει παρουσία σε λειτουργία AC",
           "boost_ac_away_temp": "Θερμοκρασία στο προκαθορισμένο Boost όταν δεν υπάρχει παρουσία σε λειτουργία AC"
@@ -253,6 +255,7 @@
           "eco_temp": "Θερμοκρασία στην οικονομική προεπιλογή",
           "comfort_temp": "Θερμοκρασία στην άνετη προεπιλογή",
           "boost_temp": "Θερμοκρασία στην ενισχυμένη προεπιλογή",
+          "frost_temp": "Θερμοκρασία στο προκαθορισμένο Frost protection",
           "eco_ac_temp": "Θερμοκρασία στην οικονομική προεπιλογή για τη λειτουργία AC",
           "comfort_ac_temp": "Θερμοκρασία στην άνετη προεπιλογή για τη λειτουργία AC",
           "boost_ac_temp": "Θερμοκρασία στην ενισχυμένη προεπιλογή για τη λειτουργία AC"
@@ -311,6 +314,7 @@
           "eco_away_temp": "Θερμοκρασία στο πρόγραμμα Eco όταν δεν υπάρχει παρουσία",
           "comfort_away_temp": "Θερμοκρασία στο πρόγραμμα Comfort όταν δεν υπάρχει παρουσία",
           "boost_away_temp": "Θερμοκρασία στο πρόγραμμα Boost όταν δεν υπάρχει παρουσία",
+          "frost_away_temp": "Θερμοκρασία στο προκαθορισμένο Frost protection όταν δεν υπάρχει παρουσία",
           "eco_ac_away_temp": "Θερμοκρασία στο πρόγραμμα Eco όταν δεν υπάρχει παρουσία σε λειτουργία AC",
           "comfort_ac_away_temp": "Θερμοκρασία στο πρόγραμμα Comfort όταν δεν υπάρχει παρουσία σε λειτουργία AC",
           "boost_ac_away_temp": "Θερμοκρασία στο πρόγραμμα Boost όταν δεν υπάρχει παρουσία σε λειτουργία AC"
