Issue #314 - rename central_mode

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -24,7 +24,7 @@
           "temp_min": "Température minimale permise",
           "temp_max": "Température maximale permise",
           "device_power": "Puissance de l'équipement",
-          "use_central_mode": "Autoriser le controle par le mode central ('central_mode`)",
+          "use_central_mode": "Autoriser le controle par une entity centrale ('nécessite une config. centrale`)",
           "use_window_feature": "Avec détection des ouvertures",
           "use_motion_feature": "Avec détection de mouvement",
           "use_power_feature": "Avec gestion de la puissance",
@@ -256,7 +256,7 @@
           "temp_min": "Température minimale permise",
           "temp_max": "Température maximale permise",
           "device_power": "Puissance de l'équipement",
-          "use_central_mode": "Autoriser le controle par le mode central ('central_mode`)",
+          "use_central_mode": "Autoriser le controle par une entity centrale ('nécessite une config. centrale`)",
           "use_window_feature": "Avec détection des ouvertures",
           "use_motion_feature": "Avec détection de mouvement",
           "use_power_feature": "Avec gestion de la puissance",
